ejercicio14/passwordapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: password-api
  name: password-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: password-api
  template:
    metadata:
      labels:
        app: password-api
    spec:
      containers:
      - image: nicopaez/password-api:2.0.1
        name: password-api
        ports:
        - name: password-api-p
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: password-api
  labels:
    app: password-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: password-api
