ejercicio14/pingapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pingapp
  name: pingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingapp
  template:
    metadata:
      labels:
        app: pingapp
    spec:
      containers:
      - image: nicopaez/pingapp:3.0.0
        name: pingapp
        ports:
        - name: pingapp-p
          containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: pingapp
  labels:
    app: pingapp
spec:
  type: ClusterIP
  ports:
  - port: 4567
  selector:
    app: pingapp
